--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
-        "illuminate/validation": "^10.0|^11.0",
+        "illuminate/validation": "^10.0|^11.0|^12.0",
         "spatie/laravel-medialibrary": "^11.0",
         "symfony/mime": "^6.0|^7.0"
     },
     "require-dev": {
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "livewire/livewire": "^3.0",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "symfony/var-dumper": "^6.0|^7.0",
-        "pestphp/pest": "^2.0"
+        "pestphp/pest": "^2.0|^3.0"
     },
     "suggest": {
         "livewire/livewire": "Allow uploads without using a front end framework"
